--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
   </div>
 
   <!-- Stack the columns on mobile by making one full-width and the other half-width -->
-<div class="row">
+<!-- <div class="row">
   <div class="col-12 col-md-8">.col-12 .col-md-8</div>
   <div class="col-6 col-md-4">.col-6 .col-md-4</div>
-</div>
+</div> -->
 
 <!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
 <div class="row">
@@ -65,10 +65,19 @@
   </div>
 </div>
 
+<h2> Fun Fact
 <!-- Columns are always 50% wide, on mobile and desktop -->
 <div class="row">
-  <div class="col-6">.col-6</div>
-  <div class="col-6">.col-6</div>
+  <div class="col-12"> 
+    <p> If you haven't noticed I am a HUGE "The Office" Fan. I have watched it everynight as I fall asleep for the last 9 years, even on vacation I play it on my cell phone at night. I have signed multiple petitions for Netflix to never remove it from the streaming website. How many hours have I spent watching "The Office"? Lets see....</p>
+
+    <p> 365 days multiplied by 9 years = 3,285 days </p>
+
+    <p> 3,285 days x multiplied by 2(30 minute episodes) = 197,100 minutes spent watching the GREATEST show of ALL time. </p>
+
+  
+
+  </div>
 </div>
 
 </div>
