added portfolio page and fixed images

--- a/index.html
+++ b/index.html
@@ -55,13 +55,12 @@
 </div> -->
 
 <!-- Columns start at 50% wide on mobile and bump up to 33.3% wide on desktop -->
-<div class="row">
-  <div class ="image-container m-5">
+<div class="row my-3 d-flex justify-content-around">
 
-    <img src="assets/images/download.jpg" class="rounded float-left" alt="The Office!"</img> 
-    <img src="assets/images/images.jpg"class="rounded float-left" alt="Frank and Beans" </img>
-    <img src="assets/images/images (1).jpg" class="rounded float-left" alt="Pretzel Day"</img>
-  </div>
+    <div class="col-3"><img src="assets/images/download.jpg" class="rounded float-left" alt="The Office!"</img></div>
+    <div class="col-3"><img src="assets/images/images.jpg"class="rounded float-left" alt="Frank and Beans" </img></div>
+    <div class="col-3"><img src="assets/images/images (1).jpg" class="rounded float-left" alt="Pretzel Day"</img></div>
+    
 </div>
 
 <h2> Fun Fact
