--- a/sample.html
+++ b/sample.html
@@ -67,21 +67,32 @@
 <!-- Columns are always 50% wide, on mobile and desktop -->
 <div class="row my-3 d-flex justify-content-around>
   
-    <div class="content-container"
+    <div class="content-container">
       
-      <div class="col-3"><img src="assets/images/download.jpg" class="rounded float-left" alt="The Office!"</img></div>
-      <p> If you haven't noticed I am a HUGE "The Office" Fan. I have watched it everynight as I fall asleep for the last 9 years, even on vacation I play it on my cell phone at night. I have signed multiple petitions for Netflix to never remove it from the streaming website. How many hours have I spent watching "The Office"? Lets see....</p>
+      <div class="col-4">
+        <img src="assets/images/download.jpg" class="rounded float-right" alt="The Office!"</img>
+      </div>
+      <div class="col-8" "text-nowrap bd-highlight" style="width: 8rem;">
+        <p id="office"> If you haven't noticed I am a HUGE "The Office" Fan. I have watched it everynight as I fall asleep for the last 9 years, even on vacation I play it on my cell phone at night. I have signed multiple petitions for Netflix to never remove it from the streaming website. 
+        </p>
+      </div>
 
       <br>
 
-      <div class="col-3"><img src="assets/images/images.jpg"class="rounded fa-long-arrow-alt-right" alt="Frank and Beans" </img></div>
-      <p> 365 days multiplied by 9 years = 3,285 days </p>
+      <div class="col-4">
+        <img src="assets/images/images.jpg"class="rounded float-right" alt="Frank and Beans" </img>
+      </div>
+      <div class="col-8">
+        <p id="Jam" "justify-text"> How many hours have I spent watching "The Office"? Lets see....
+        <p id="math">365 days multiplied by 9 years = 3,285 days</p>
+        </p>
+      </div>  
 
       <br>
 
       <div class="col-3"><img src="assets/images/images (1).jpg" class="rounded float-left" alt="Pretzel Day"</img></div>
-      
-      <p> 3,285 days x multiplied by 2(30 minute episodes) = 197,100 minutes spent watching the GREATEST show of ALL time. </p>
+        <p> 3,285 days x multiplied by 2(30 minute episodes) = 197,100 minutes spent watching the GREATEST show of ALL time. </p>
+
     </div>
 
   </div>
