--- a/index.html
+++ b/index.html
@@ -41,38 +41,41 @@
       </div>
                 
   </nav>
+  
+  <div class="container-fluid">
 
-  <div class="jumbotron">
-    <h1 class="display-4">Quinones Quodes </h1>
-    <p class="lead">Can innovation be a passion? Ok how about creativity, can that be a passion? Well after spending many years searching for a passion and feeling confused when I couldn’t answer that question, I discovered my passion is creatively creating.  It is effortless for me to take someone’s ideas, mix in my magic, then produce a finished good better than we all imagined..</p>
-  </div>
-
-  <h2> Fun Fact </h2>
-
-    <div class="row my-3 d-flex justify-content-around>
-      <div class="col-4">
-          <img src="assets/images/download.jpg" alt="The Office!"</img>
-      <div class="col-8" "row my-3 d-flex justify-text-around-center">
-          <p id="office"> If you haven't noticed I am a HUGE "The Office" Fan. I have watched it everynight as I fall asleep for the last 9 years, even on vacation I play it on my cell phone at night. I have signed multiple petitions for Netflix to never remove it from the streaming website. 
-          </p>
+    <div class="jumbotron">
+      <h1 class="display-4">Quinones Quodes </h1>
+      <p class="lead">Can innovation be a passion? Ok how about creativity, can that be a passion? Well after spending many years searching for a passion and feeling confused when I couldn’t answer that question, I discovered my passion is creatively creating.  It is effortless for me to take someone’s ideas, mix in my magic, then produce a finished good better than we all imagined..</p>
     </div>
 
-    <div class="row my-3 d-flex justify-content-around>
+    <h2> Fun Fact </h2>
+
+      <div class="row my-3 d-flex justify-content-around">
         <div class="col-4">
-            <img src="assets/images/images.jpg" alt="The Office!"</img>
+            <img src="assets/images/download.jpg" alt="The Office!"</img>
         <div class="col-8" "row my-3 d-flex justify-text-around-center">
-            <p id="jam"> How many hours have I spent watching "The Office"? Lets see...</p>
-            <p>365 days multiplied by 9 years = 3,285 days
+            <p id="office"> If you haven't noticed I am a HUGE "The Office" Fan. I have watched it everynight as I fall asleep for the last 9 years, even on vacation I play it on my cell phone at night. I have signed multiple petitions for Netflix to never remove it from the streaming website. 
             </p>
       </div>
 
-      <div class="row my-3 d-flex justify-content-around>
+      <div class="row my-3 d-flex justify-content-around">
+          <div class="col-4">
+              <img src="assets/images/images.jpg" alt="The Office!"</img>
+          <div class="col-8" "row my-3 d-flex justify-text-around-center">
+              <p id="jam"> How many hours have I spent watching "The Office"? Lets see...</p>
+              <p>365 days multiplied by 9 years = 3,285 days
+              </p>
+      </div>
+
+      <div class="row my-3 d-flex justify-content-around">
           <div class="col-4">
               <img src="assets/images/images (1).jpg" alt="The Office!"</img>
           <div class="col-8" "row my-3 d-flex justify-text-around-center">
-              
-        </div>
-
+              <p id="pretzel"> 3,285 days x multiplied by 2(30 minute episodes) = 197,100 minutes spent watching the GREATEST show of ALL time. 
+              </p>
+      </div>
+  </div>
 </div>
 
 
